--- a/src/app/discussion/discussion.component.html
+++ b/src/app/discussion/discussion.component.html
@@ -3,12 +3,11 @@
     <h1>Welcome to the Discussion Board</h1>
     <h3>Find resources and answers pertaining to your questions</h3>
   </div>
-  <div>
-    <button routerLink="/discussion/new" class="startbutton">
+  <button routerLink="/discussion/new" class="btn btn-success" style="margin-top: 2%; object-position: center;">
     Start a discussion
-    </button>
-</div>
-  <div>
+  </button>
+  <div style="margin-top: 5%">
     <app-discussion-card></app-discussion-card>
   </div>
 </div>
+
