--- a/src/app/discussion/discussion.component.css
+++ b/src/app/discussion/discussion.component.css
@@ -4,7 +4,7 @@
   height: auto;
 }
 
-.startbutton {
+button {
   border-radius: 4px;
   background-color: #74B146;
   border: none;
@@ -16,19 +16,18 @@
   width: 180px;
   transition: all 0.5s;
   cursor: pointer;
+  margin: 3px;
   box-shadow: 0 10px 20px -8px rgba(0, 0, 0,.7);
-  margin-left: 700px;
-  margin-top: 20px;
 }
 
-.startbutton{
+button{
   cursor: pointer;
   display: inline-block;
   position: relative;
   transition: 0.5s;
 }
 
-.startbutton:after {
+button:after {
   content: '»';
   position: absolute;
   opacity: 0;
@@ -37,12 +36,12 @@
   transition: 0.5s;
 }
 
-.startbutton:hover{
+button:hover{
   padding-right: 24px;
   padding-left:8px;
 }
 
-.startbutton:hover:after {
+button:hover:after {
   opacity: 1;
   right: 10px;
 }
