--- a/src/app/discussion/discussion.component.html
+++ b/src/app/discussion/discussion.component.html
@@ -3,11 +3,12 @@
     <h1>Welcome to the Discussion Board</h1>
     <h3>Find resources and answers pertaining to your questions</h3>
   </div>
-  <button routerLink="/discussion/new" class="btn btn-success" style="margin-top: 2%; object-position: center;">
+  <div>
+    <button routerLink="/discussion/new" class="startbutton">
     Start a discussion
-  </button>
-  <div style="margin-top: 5%">
+    </button>
+</div>
+  <div>
     <app-discussion-card></app-discussion-card>
   </div>
 </div>
-
